--- a/src/app/pages/games/game-detail/game-detail.page.html
+++ b/src/app/pages/games/game-detail/game-detail.page.html
@@ -8,7 +8,6 @@
                 </div>
                 <div class="related-game" *ngIf="game.parent_game">Remaster de <a [routerLink]="'/games'">Sonic: tu juego favorito</a></div>
                 <mat-chip-listbox aria-label="Games info">
-                    <mat-chip [routerLink]="'/franchises/'+game.franchise!.id">{{game.franchise!.name}}</mat-chip>
                     <div *ngIf="game.genres && game.genres.length">
                         <mat-chip *ngFor="let genre of game.genres" [routerLink]="'/genres/'+genre!.id">{{genre.name}}</mat-chip>
                     </div>
@@ -114,6 +113,17 @@
             </div>
         </div>
 
+        <mat-expansion-panel *ngIf="game.franchise">
+            <mat-expansion-panel-header class="divider"[style]="backgroundStyle">
+                <mat-panel-title>
+                Franquicia
+                </mat-panel-title>
+            </mat-expansion-panel-header>
+            <vgdb-items-list [itemsList]="[game.franchise]"
+                        navigateTo="franchises" imgPath="franchises">
+            </vgdb-items-list>
+        </mat-expansion-panel>
+
         <mat-expansion-panel *ngIf="charactersPlayable && charactersPlayable.length">
             <mat-expansion-panel-header class="divider"[style]="backgroundStyle">
               <mat-panel-title>
@@ -154,6 +164,21 @@
             </mat-expansion-panel-header>
             <div class="value-info" *ngFor="let award of game.awards">{{award.Game_Award!.year + ' ' +award.award!.name + ' ' + award.name + ' ' + award.Game_Award!.result}}</div>
         </mat-expansion-panel>
+
+
+        <mat-expansion-panel *ngIf="game.media">
+            <mat-expansion-panel-header class="divider"[style]="backgroundStyle">
+                <mat-panel-title>
+                Media
+                </mat-panel-title>
+            </mat-expansion-panel-header>
+            <iframe width="420" height="315"
+                [src]="game.media | safe: 'resourceUrl'">
+            </iframe>
+        </mat-expansion-panel>
+
+
+
 
         <div class="info-entry">
             <button (click)="addGenre()">Genre</button>
